# IM-chat

./: .gitignore  CMakeLists.txt  Doxyfile  QtSimpleChat.pro  README.md
Client-Side/: CMakeLists.txt  Client-Side.pro  chat.h  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  chatwithgroup.cpp  chatwithgroup.h  chatwithgroup.ui  chatwithone.cpp  chatwithone.h  chatwithone.ui
Server-Side/: CMakeLists.txt  chatserver.cpp  chatserver.h  serverwindow.h  serverworker.cpp  serverworker.h
